Comment out clients section in index.html
Comment out the clients section in index.html

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </div>
     </section>
 
-    <section id="clients" class="relative z-10 py-10 border-y border-white/5 bg-slate-900/50">
+    <!-- <section id="clients" class="relative z-10 py-10 border-y border-white/5 bg-slate-900/50">
         <div class="max-w-7xl mx-auto px-6 text-center">
             <p class="text-xs font-mono text-slate-500 uppercase tracking-widest mb-8">Trusted By Forward-Thinking Companies</p>
             <div class="flex flex-wrap justify-center items-center gap-8 md:gap-16 opacity-60">
@@ -146,7 +146,7 @@
                 <div class="flex items-center gap-2 text-lg font-display font-bold text-white"><i class="ph-fill ph-circles-three text-2xl"></i> ORBITAL</div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <section id="services" class="relative z-10 py-20 md:py-24">
         <div class="max-w-7xl mx-auto px-6">
