--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@
             <!-- Desktop Menu -->
             <div class="hidden md:flex items-center gap-8 text-sm text-slate-300 font-medium">
                 <a href="#services" class="hover:text-white hover:text-violet-400 transition-colors">Services</a>
-                <a href="#clients" class="hover:text-white hover:text-violet-400 transition-colors">Clients</a>
+                <!-- <a href="#clients" class="hover:text-white hover:text-violet-400 transition-colors">Clients</a> -->
+                <a href="https://blog.chalkframe.com" class="hover:text-white hover:text-violet-400 transition-colors">Blog</a>
                 <a href="#about" class="hover:text-white hover:text-violet-400 transition-colors">About</a>
                 <a href="#contact" class="px-5 py-2 bg-violet-600 hover:bg-violet-500 text-white text-sm font-medium transition-all border border-violet-500/50">
                     Analyze My Workflow
