--- a/index.html
+++ b/index.html
@@ -173,8 +173,8 @@
             </div>
             
             <h1 class="font-display text-4xl md:text-7xl font-medium leading-tight mb-6 tracking-tight">
-                Drafting the Future.<br>
-                <span class="text-transparent bg-clip-text bg-gradient-to-r from-white via-slate-200 to-slate-500">Automating the Present.</span>
+                Solving Your Most Complex<br>
+                <span class="text-transparent bg-clip-text bg-gradient-to-r from-white via-slate-200 to-slate-500">Business Challenges.</span>
             </h1>
             
             <p class="text-slate-300 text-base md:text-xl max-w-2xl mx-auto mb-10 font-light leading-relaxed px-4">
