Comment out Clients link and add Blog link

--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@
         <div id="mobile-menu" class="md:hidden bg-slate-900 border-b border-white/5">
             <div class="px-6 py-4 space-y-4 flex flex-col">
                 <a href="#services" class="block text-slate-300 hover:text-violet-400 py-2 border-b border-white/5">Services</a>
-                <a href="#clients" class="block text-slate-300 hover:text-violet-400 py-2 border-b border-white/5">Clients</a>
+                <!-- <a href="#clients" class="block text-slate-300 hover:text-violet-400 py-2 border-b border-white/5">Clients</a> -->
+                <a href="https://blog.chalkframe.com" class="block text-slate-300 hover:text-violet-400 py-2 border-b border-white/5">Blog</a>
                 <a href="#about" class="block text-slate-300 hover:text-violet-400 py-2 border-b border-white/5">About</a>
                 <a href="#contact" class="block w-full text-center py-3 bg-violet-600 text-white font-bold mt-2">Analyze My Workflow</a>
             </div>
