--- a/index.html
+++ b/index.html
@@ -422,5 +422,24 @@
         }
         form.addEventListener("submit", handleSubmit);
     </script>
+    
+    <!-- NEW PRODUCT ANNOUNCEMENT BANNER -->
+    <div id="product-banner" class="fixed bottom-6 right-6 z-50 w-full max-w-sm transition-all duration-500 transform translate-y-0">
+        <div class="glass-card p-4 border-l-4 border-gold-400 flex items-start gap-4 shadow-2xl shadow-black/50 relative bg-slate-900/90 backdrop-blur-md">
+            <button onclick="this.parentElement.parentElement.remove()" class="absolute top-2 right-2 text-slate-500 hover:text-white transition-colors">
+                <i class="ph ph-x"></i>
+            </button>
+            <div class="bg-gold-400/20 p-2 rounded text-gold-400 mt-1">
+                <i class="ph-fill ph-sparkle text-xl"></i>
+            </div>
+            <div>
+                <h4 class="font-display font-bold text-white text-sm mb-1">New Product Launch</h4>
+                <p class="text-slate-300 text-xs mb-3 leading-relaxed">Get a custom branded startup blog with $0 hosting fees forever. Limited time offer.</p>
+                <a href="blog-launch.html" class="text-xs font-bold text-gold-400 hover:text-white flex items-center gap-1 transition-colors uppercase tracking-wide">
+                    View Launch Offer <i class="ph-bold ph-arrow-right"></i>
+                </a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
