Restore Trusted Partners section in index.html

--- a/index.html
+++ b/index.html
@@ -195,18 +195,28 @@
     </section>
 
     <!-- Trusted Partners -->
-    <!-- <section id="clients" class="relative z-10 py-10 border-y border-white/5 bg-slate-900/50">
-        <div class="max-w-7xl mx-auto px-6 text-center">
-            <p class="text-xs font-mono text-slate-500 uppercase tracking-widest mb-8">Trusted By Forward-Thinking Companies</p>
-            <div class="flex flex-wrap justify-center items-center gap-8 md:gap-16 opacity-60 grayscale hover:grayscale-0 transition-all duration-500">
-                
-                <div class="flex items-center gap-2 text-lg font-display font-bold text-white hover:text-violet-300 transition-colors"><i class="ph-fill ph-hexagon text-2xl"></i> NEXUS</div>
-                <div class="flex items-center gap-2 text-lg font-display font-bold text-white hover:text-violet-300 transition-colors"><i class="ph-fill ph-triangle text-2xl"></i> VORTEX</div>
-                <div class="flex items-center gap-2 text-lg font-display font-bold text-white hover:text-violet-300 transition-colors"><i class="ph-fill ph-waves text-2xl"></i> FLUX.IO</div>
-                <div class="flex items-center gap-2 text-lg font-display font-bold text-white hover:text-violet-300 transition-colors"><i class="ph-fill ph-circles-three text-2xl"></i> ORBITAL</div>
+    <section id="clients" class="relative z-10 py-10 border-y border-white/5 bg-slate-900/50">
+    <div class="max-w-7xl mx-auto px-6 text-center">
+        <p class="text-xs font-mono text-slate-500 uppercase tracking-widest mb-8">
+            Trusted By Forward-Thinking Companies
+        </p>
+
+        <div class="flex flex-wrap justify-center items-center gap-8 md:gap-16 opacity-60 grayscale hover:grayscale-0 transition-all duration-500">
+            
+            <div class="flex items-center">
+                <a href="https://elevatebox.in" target="_blank" rel="noopener">
+                    <img 
+                        src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjuaj_jIxHSabRg_VR2iE5C67X8knA2jE_Oukvzw90QNSabgBEl2AkhMm68cQdVWQSYhqKel0SAKe-VpwyuBXL4yBdw6UeEvNKHcJtCM4ahutvr126UzPjIK6AzXNRzVuzntUZDUtoQWECz_MPnI_rR27-RNyW9IZNfKd1Z8kRX7LFyMCU83jHa5b8HmY4/s320/Gemini_Generated_Image_nzgr55nzgr55nzgr-removebg-preview.png" 
+                        alt="Elevatebox" 
+                        class="h-11"
+                    >
+                </a>
             </div>
+
         </div>
-    </section> -->
+    </div>
+</section>
+
 
     <!-- Services Grid -->
     <section id="services" class="relative z-10 py-20 md:py-24">
