--- a/blog-launch.html
+++ b/blog-launch.html
@@ -68,8 +68,8 @@
                 Product Launch
             </div>
             <h1 class="font-display text-5xl md:text-7xl font-medium leading-tight mb-6">
-                custom-branded blog<br>
-                <span class="text-transparent bg-clip-text bg-gradient-to-r from-white via-violet-200 to-violet-500">with zero hosting fees</span>
+                Custom-Branded Blog<br>
+                <span class="text-transparent bg-clip-text bg-gradient-to-r from-white via-violet-200 to-violet-500">With Zero Hosting Fees</span>
             </h1>
             <p class="text-slate-300 text-lg md:text-xl max-w-2xl mx-auto mb-10 font-light leading-relaxed">
                 A fully customized startup blog that matches your brand perfectly. <br>
